--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "c9ad6938-f8ea-40a8-9b93-517d3363bfe3"
   },
   "newProjectRoot": "projects",
   "projects": {
